# gpt2md

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
gpt2md/: __init__.py  cli.py  main.py
